# lyrics_analysis_nlp

./: Lyrics_LedZeppelin.json  README.md  basic_stats.py  cleaner.py  genius_api.py  genius_test.py  led_zeppelin.csv  led_zeppelin_cleaned.csv  led_zeppelin_stats.csv  pyproject.toml  scrapper.py  visual.py
